# zsipos

./: .gitignore  .gitmodules  README.md
.reuse/: dep5
LICENSES/: GPL-3.0-or-later.txt  LicenseRef-asics-1.txt  LicenseRef-bitstream-1.txt  LicenseRef-smail-1.txt
gateware/: zsipos_setup.py
gateware/soc/: .gitignore  arty.py  build.sh  dts.py  flash.py  flashmap.py  nexys4ddr.py  platform.py  zsipos.py
kernel/: .gitignore  qemu.dts  zsipos.dts
kernel/dts/: Makefile  mkdts.py
kernel/dual/: README.md  run.sh
kernel/initramfs/: Makefile  asroot.sh  busybox.config
kernel/sel4/: .gitignore
kernel/sel4/toplevels/sel4zsipos/: CMakeLists.txt  easy-settings.cmake  ipserv.camkes  ipserv.inc  ipsrv.camkes  settings.cmake
kernel/sel4/toplevels/sel4zsipos/components/Echo/: Echo.camkes
kernel/sel4/toplevels/sel4zsipos/components/Echo/src/: echo.c
kernel/sel4/toplevels/sel4zsipos/components/IPServ/: IPServ.camkes
kernel/sel4/toplevels/sel4zsipos/components/IPServ/src/: ipserv.c  pico_dev_litex.c  pico_dev_litex.h  remcalls_s.c
kernel/sel4/toplevels/sel4zsipos/components/MSTick/: MSTick.camkes
kernel/sel4/toplevels/sel4zsipos/components/MSTick/src/: mstick.c
kernel/sel4/toplevels/sel4zsipos/include/: csroffsets.h  litex.h  picotcp.h  remcalls.h  sel4ip.h  sel4zsipos_config.h  str_buf.h
kernel/sel4test/: qemu.dts  zsipos-patches  zsipos.dts
scripts/: .gitignore  build-all.sh  build-bbl.sh  build-board.sh  build-buildroot.sh  build-cmake.sh  build-dist.sh  build-dts.sh  build-fltk.sh  build-initramfs.sh  build-kernel.sh  build-linux.sh  build-microwindows.sh  build-openocd.sh  build-pj.sh  build-qemu.sh  build-rocket-chip.sh  build-sel4-proj.sh  build-sel4iptool.sh  build-sel4test.sh  build-sel4zsipos.sh  build-toolchain.sh  build-u-boot.sh  build-zrtpcpp.sh  build-zsipos.sh  checkout-other-branchnames.sh  checkout-zsipos-branchnames.sh  config.sub  cython-fltk.inc  cython-makefile.inc  cython-pj.inc  cython-zrtpcpp.inc  env.sh  env.sh.inc  gitstamps.sh  install-deps.sh  run-gdb-python.sh  run-gdb.sh  run-sel4test.sh  setup-venv.sh  (+2 more)
servers/icestorage/: .gitignore  icestorage.py  icestorage.service  sample-client.py  server.conf.in  (+1 more)
software/: .gitignore
toolchain/: .gitignore
version/: update.txt
(+137 files in other folders)
